--- a/MoviesApp.Droid/Resources/layout/movie_detail.axml
+++ b/MoviesApp.Droid/Resources/layout/movie_detail.axml
@@ -1,8 +1,36 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+﻿<?xml version="1.0" encoding="utf-8"?>
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-</LinearLayout>
+		android:orientation="vertical"
+		android:rowCount="3"
+		android:columnCount="2">
+	<Mvx.MvxImageView
+					local:MvxBind="ImageUrl SelectedMovie.PosterPath"
+					android:layout_row="0"
+					android:layout_column="0"
+					android:layout_rowWeight="1"
+					android:layout_columnWeight="1"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content" />
+	<LinearLayout android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:orientation="vertical"
+								android:layout_row="0"
+								android:layout_column="1"
+								android:layout_rowWeight="1"
+								android:layout_columnWeight="1">
+		<TextView local:MvxBind="Text SelectedMovie.Title"
+							android:layout_width="match_parent"
+							android:layout_height="match_parent" />
+	</LinearLayout>
+	<TextView local:MvxBind="Text SelectedMovie.Overview"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_row="1"
+							android:layout_column="0"
+							android:layout_columnSpan="2"
+							android:layout_rowWeight="1" />
+	
+</GridLayout>
