--- a/MoviesApp.Droid/Resources/layout/movie_detail.axml
+++ b/MoviesApp.Droid/Resources/layout/movie_detail.axml
@@ -3,40 +3,59 @@
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-		android:orientation="vertical"
-		android:padding="10dp">
-
-	<LinearLayout android:layout_width="match_parent"
-								android:layout_height="wrap_content"
-								android:orientation="horizontal">
-		<Mvx.MvxImageView local:MvxBind="ImageUrl SelectedMovie.PosterPath"
-											android:layout_width="0dp"
-											android:layout_height="wrap_content"
-											android:layout_weight="0.4"
-											android:layout_gravity="left"
-											android:adjustViewBounds="true"
-											android:scaleType="fitXY"
-											android:background="@drawable/image_frame" />
-
-		<LinearLayout android:layout_width="0dp"
-									android:layout_height="wrap_content"
-									android:orientation="vertical"
-									android:layout_weight="0.6"
-									android:layout_gravity="right"
-									android:layout_marginLeft="10dp">
-			<TextView local:MvxBind="Text SelectedMovie.Title"
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content" />
-			<TextView local:MvxBind="Text SelectedMovie.ReleaseDate, Converter=ReleaseDate"
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content" />
+    android:orientation="vertical"
+    android:padding="10dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Mvx.MvxImageView
+            local:MvxBind="ImageUrl SelectedMovie.PosterPath"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
+            android:layout_gravity="left"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:background="@drawable/image_frame" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="0.6"
+            android:layout_gravity="right"
+            android:layout_marginLeft="10dp">
+            <TextView
+                local:MvxBind="Text SelectedMovie.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                local:MvxBind="Text SelectedMovie.ReleaseDate, Converter=ReleaseDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
+    <TextView
+        local:MvxBind="Text SelectedMovie.Overview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+				android:layout_marginTop="10dp"
+				android:layout_marginBottom="10dp"
+        android:gravity="center_vertical" />
+		<LinearLayout
+				local:MvxBind="Visibility IsBusy, Converter=InvertedVisibility"
+				android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
+				<Mvx.MvxImageView
+            local:MvxBind="ImageUrl SimilarMovies[0].PosterPath"
+            style="@style/HomeMovieImageLeft" />
+        <Mvx.MvxImageView
+            local:MvxBind="ImageUrl SimilarMovies[1].PosterPath"
+            style="@style/HomeMovieImageCenter" />
+        <Mvx.MvxImageView
+            local:MvxBind="ImageUrl SimilarMovies[2].PosterPath"
+            style="@style/HomeMovieImageRight" />
 		</LinearLayout>
-
-	</LinearLayout>
-
-	<TextView local:MvxBind="Text SelectedMovie.Overview"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:gravity="center_vertical" />
-	
 </LinearLayout>
