--- a/MoviesApp.Droid/Resources/layout/movie_detail.axml
+++ b/MoviesApp.Droid/Resources/layout/movie_detail.axml
@@ -13,20 +13,9 @@
             android:orientation="horizontal">
             <Mvx.MvxImageView
                 local:MvxBind="ImageUrl SelectedMovie.PosterPath"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.4"
-                android:layout_gravity="left"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY"
-                android:background="@drawable/image_frame" />
+                style="@style/SelectedMovieImage" />
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="0.6"
-                android:layout_gravity="right"
-                android:layout_marginLeft="10dp">
+                style="@style/SelectedMovieDescriptionLayout">
                 <TextView
                     local:MvxBind="Text SelectedMovie.Title"
                     android:layout_width="wrap_content"
