--- a/MoviesApp.Droid/Resources/layout/toolbar.xml
+++ b/MoviesApp.Droid/Resources/layout/toolbar.xml
@@ -1,19 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:local="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/actionBarSize"
-    android:background="?android:attr/colorPrimary"
-    android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar">
-	<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/ApplicationName"
-			android:textSize="26sp"
-			android:textStyle="bold"
-			android:textColor="@color/text_color_primary"
-			android:layout_gravity="center"
-			android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar" />
-</Toolbar>
+    android:background="@color/color_secondary"
+		android:elevation="4dp">
+
+</android.support.v7.widget.Toolbar>
