--- a/MoviesApp.Droid/Resources/layout/movie_detail.axml
+++ b/MoviesApp.Droid/Resources/layout/movie_detail.axml
@@ -1,53 +1,55 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:local="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Mvx.MvxImageView
-                local:MvxBind="ImageUrl SelectedMovie.PosterPath"
-                style="@style/SelectedMovieImage" />
-            <LinearLayout
-                style="@style/SelectedMovieDescriptionLayout">
-                <TextView
-                    local:MvxBind="Text SelectedMovie.Title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    local:MvxBind="Text SelectedMovie.ReleaseDate, Converter=ReleaseDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-        <TextView
-            local:MvxBind="Text SelectedMovie.Overview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center_vertical" />
-        <LinearLayout
-            local:MvxBind="Visibility IsBusy, Converter=InvertedVisibility"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal">
-            <Mvx.MvxImageView
-                local:MvxBind="ImageUrl SimilarMovies[0].PosterPath; Click SelectFirstMovieCommand"
-                style="@style/HomeMovieImageLeft" />
-            <Mvx.MvxImageView
-                local:MvxBind="ImageUrl SimilarMovies[1].PosterPath; Click SelectSecondMovieCommand"
-                style="@style/HomeMovieImageCenter" />
-            <Mvx.MvxImageView
-                local:MvxBind="ImageUrl SimilarMovies[2].PosterPath; Click SelectThirdMovieCommand"
-                style="@style/HomeMovieImageRight" />
-        </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:local="http://schemas.android.com/apk/res-auto"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical">
+		<include layout="@layout/toolbar" />
+	<ScrollView
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:layout_marginTop="10dp">
+			<LinearLayout
+					android:layout_width="fill_parent"
+					android:layout_height="fill_parent"
+					android:orientation="vertical">
+					<LinearLayout
+							android:layout_width="match_parent"
+							android:layout_height="wrap_content"
+							android:orientation="horizontal">
+							<Mvx.MvxImageView
+									local:MvxBind="ImageUrl SelectedMovie.PosterPath"
+									style="@style/SelectedMovieImage" />
+							<LinearLayout
+									style="@style/SelectedMovieDescriptionLayout">
+									<TextView
+											local:MvxBind="Text SelectedMovie.Title"
+											style="@style/SelectedMovieTitle" />
+									<TextView
+											local:MvxBind="Text SelectedMovie.ReleaseDate, Converter=ReleaseDate"
+											style="@style/SelectedMovieTitle" />
+							</LinearLayout>
+					</LinearLayout>
+					<TextView
+							local:MvxBind="Text SelectedMovie.Overview"
+							style="@style/SelectedMovieOverview" />
+					<LinearLayout
+							local:MvxBind="Visibility IsBusy, Converter=InvertedVisibility"
+							android:layout_width="fill_parent"
+							android:layout_height="wrap_content"
+							android:layout_marginBottom="20dp"
+							android:orientation="horizontal">
+							<Mvx.MvxImageView
+									local:MvxBind="ImageUrl SimilarMovies[0].PosterPath; Click SelectFirstMovieCommand"
+									style="@style/HomeMovieImageLeft" />
+							<Mvx.MvxImageView
+									local:MvxBind="ImageUrl SimilarMovies[1].PosterPath; Click SelectSecondMovieCommand"
+									style="@style/HomeMovieImageCenter" />
+							<Mvx.MvxImageView
+									local:MvxBind="ImageUrl SimilarMovies[2].PosterPath; Click SelectThirdMovieCommand"
+									style="@style/HomeMovieImageRight" />
+					</LinearLayout>
+			</LinearLayout>
+	</ScrollView>
+</LinearLayout>
+
